kubernetes/prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestioncommandes-deployment
  namespace: payetonkawa-prod
  labels:
    app: gestioncommandes
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestioncommandes
  template:
    metadata:
      labels:
        app: gestioncommandes
        environment: production
    spec:
      automountServiceAccountToken: false
      containers:
        - name: gestioncommandes
          image: registry.germainleignel.com/paye-ton-kawa/gestion-commandes
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: payetonkawa-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payetonkawa-ingress
  namespace: payetonkawa-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: api.payetonkawa.germainleignel.com
      http:
        paths:
          - path: /commandes
            pathType: Prefix
            backend:
              service:
                name: gestioncommandes-service
                port:
                  number: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-commandes
  namespace: payetonkawa-prod
spec:
  stripPrefix:
    prefixes:
      - /commandes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payetonkawa-ingress-middleware
  namespace: payetonkawa-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: payetonkawa-prod-strip-commandes@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: api.payetonkawa.germainleignel.com
      http:
        paths:
          - path: /commandes
            pathType: Prefix
            backend:
              service:
                name: gestioncommandes-service
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gestioncommandes-service
  namespace: payetonkawa-prod
  labels:
    environment: production
spec:
  selector:
    app: gestioncommandes
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: payetonkawa-prod
  labels:
    environment: production
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432%
